# FrikandellenPlots

./: .gitignore  README.md  dash_app.py  data.csv  main.py  requirements.txt  requirements_dev.txt  setup.cfg  test.ipynb  tox.ini
src/firkandellen/: barchart.py  piechart.py
tests/: tests_frikandellen.py
